--- a/index.html
+++ b/index.html
@@ -112,11 +112,11 @@
             <i class="fab fa-github"></i>
         </a>
         <!-- Email Icon -->
-        <a href="mailto:nawaf92004@gmail.com" class="btn btn-dark" aria-label="Email">
+        <a href="mailto:nawafalmaweri1@gmail.com" class="btn btn-dark" aria-label="Email">
             <i class="fas fa-envelope"></i>
         </a>
         <!-- LinkedIn Icon -->
-        <a href="https://www.linkedin.com/in/nawaf-al-mawri-259887188/" class="btn btn-dark" target="_blank" aria-label="LinkedIn">
+        <a href="https://www.linkedin.com/in/nawafal-mawri/" class="btn btn-dark" target="_blank" aria-label="LinkedIn">
             <i class="fab fa-linkedin"></i>
         </a>
         <!-- WhatsApp Icon -->
