--- a/DVLD.html
+++ b/DVLD.html
@@ -41,7 +41,7 @@
         
                 <h3>It was used in the project</h3>
                 <ul class="list-unstyled">
-                    <li><i class="fas fa-check-square"></i> <strong>User Interface</strong> – Developed using Windows Forms in C# ASP.Net Framework 4.8.1</li>
+                    <li><i class="fas fa-check-square"></i> <strong>User Interface</strong> – Developed using Windows Forms in C# .Net Framework 4.8.1</li>
                     <li><i class="fas fa-check-square"></i> <strong>Database</strong> – SQL Database is used for storing and managing data.</li>
                     <li><i class="fas fa-check-square"></i> <strong>Architecture</strong> – Three-layer architecture(Presentation Layer (UI), Business Logic Layer, Data Access Layer).</li>
                     <li><i class="fas fa-check-square"></i> <strong>User Controls</strong> – User Controls are utilized to create reusable components for a modular and maintainable design.</li>
@@ -315,8 +315,10 @@
     </section>
 
     <!-- Footer -->
-    <footer class="bg-dark text-white text-center py-3 mt-5">
-        <p>&copy; 2025 Your Name. All Rights Reserved.</p>
+     <footer class="bg-dark text-white text-center py-3 mt-5">
+        <div class="container">
+            <p>&copy; 2025 <strong>Nawaf AlMawri</strong> | All Rights Reserved | Designed & Developed by <strong>@nmtcode</strong></p>
+        </div>
     </footer>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
