--- a/DVLD.html
+++ b/DVLD.html
@@ -169,11 +169,18 @@
     <section id="projects" class="container mt-5">
         <h2>Interfaces</h2>
         <div class="row">
-            <div class="card">
+            <div class="card col-md-6">
+                <img src="DVLD/تسجيل الدخول.png" class="card-img-top" alt="Project 1">
+                <div class="card-body text-center">
+                    <h3 class="card-title">Login Page</h3>
+                    <p class="card-text">Remember password using Windows registry and password hash in database</p>
+                </div>
+            </div>
+            <div class="card col-md-6">
                 <img src="DVLD/الرئيسية.png" class="card-img-top" alt="Project 1">
                 <div class="card-body text-center">
                     <h3 class="card-title">Main Page</h3>
-                    <p class="card-text">lap lap lap</p>
+                    <p class="card-text"></p>
                 </div>
             </div>
         </div>
@@ -315,7 +322,7 @@
     </section>
 
     <!-- Footer -->
-     <footer class="bg-dark text-white text-center py-3 mt-5">
+    <footer class="bg-dark text-white text-center py-3 mt-5">
         <div class="container">
             <p>&copy; 2025 <strong>Nawaf AlMawri</strong> | All Rights Reserved | Designed & Developed by <strong>@nmtcode</strong></p>
         </div>
