--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
             </div>
             <div class="col-md-6">
                 <div class="card">
-                    <img src="project2.jpg" class="card-img-top" alt="Project 2">
+                    <img src="ULS/الرئيسية.png" class="card-img-top" alt="Project 2">
                     <div class="card-body">
                         <h5 class="card-title">University Library System</h5>
                         <p class="card-text">includes management of books, students, borrowing records, and violations, along with records of student research submissions and their visits to the library. The system also tracks the colleges and specializations available within the university. It helps in organizing all these aspects efficiently, ensuring smooth library operations, accurate tracking of student activities, and seamless management of library resources.</p>
