--- a/index.html
+++ b/index.html
@@ -42,6 +42,7 @@
                     <li>✅ <strong>Driver and Vehicle Licensing Department System</strong> – Designed to automate and manage licensing data efficiently.</li>
                     <li>✅ <strong>University Library Department System</strong> – Developed to facilitate book archiving and streamline the borrowing process.</li>
                 </ul>
+                <a href="Nawaf_AlMawri_CV.pdf" download class="download-btn">📥 Download CV</a>
             </section>
         </section>
 
