--- a/ULS.html
+++ b/ULS.html
@@ -78,7 +78,7 @@
 
     <!-- Projects Section -->
     <section id="projects" class="container mt-5">
-        <h2>Interfaces</h2>
+        <h2>Interfaces Overview</h2>
         <div class="row">
             <div class="card col-md-6">
                 <img src="ULS/تسجيل الدخول.png" class="card-img-top" alt="Project 1">
