--- a/index.html
+++ b/index.html
@@ -77,6 +77,7 @@
     <section id="Courses" class="container mt-5">
         <h2>Courses</h2>
         <ul class="list-group">
+            <li class="list-group-item"><strong>Database Level2 - Concepts & T-SQL </strong> Advanced Topics in Databases, Programming, and Advanced Querying Using T-SQL</li>
             <li class="list-group-item"><strong>C# Programming Level 2 </strong> Study advanced topics in the language</li>
             <li class="list-group-item"><strong>Full Real Project </strong> A real-world project consisting of interfaces linked to databases</li>
             <li class="list-group-item"><strong>C# & Database Connectivity </strong> Connecting interfaces to databases</li>
