--- a/ULS.html
+++ b/ULS.html
@@ -78,7 +78,7 @@
 
     <!-- Projects Section -->
     <section id="projects" class="container mt-5">
-        <h2>Interfaces Overview</h2>
+        <h2>Interfaces</h2>
         <div class="row">
             <div class="card col-md-6">
                 <img src="ULS/تسجيل الدخول.png" class="card-img-top" alt="Project 1">
@@ -168,12 +168,11 @@
 
     </section>
 
-    <!-- Footer -->
-    <footer class="bg-dark text-white text-center py-3 mt-5">
-        <div class="container">
-            <p>&copy; 2025 <strong>Nawaf AlMawri</strong> | All Rights Reserved | Designed & Developed by <strong>@nmtcode</strong></p>
-        </div>
-    </footer>
+     <footer class="bg-dark text-white text-center py-3 mt-5">
+            <div class="container">
+                <p>&copy; 2025 <strong>Nawaf AlMawri</strong> | All Rights Reserved</p>
+            </div>
+        </footer>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
 </body>
