--- a/ULS.html
+++ b/ULS.html
@@ -81,14 +81,14 @@
         <h2>Interfaces</h2>
         <div class="row">
             <div class="card col-md-6">
-                <img src="ULS/تسجيل الدخول.png" class="card-img-top" alt="Project 1">
+                <img src="ULS/تسجيل الدخول.png" class="card-img-top" alt="Project 1" loading="lazy">
                 <div class="card-body text-center">
                     <h3 class="card-title">Login Page</h3>
                     <p class="card-text">Remember password using Windows registry and password hash in database</p>
                 </div>
             </div>
             <div class="card col-md-6">
-                <img src="ULS/الرئيسية.png" class="card-img-top" alt="Project 1">
+                <img src="ULS/الرئيسية.png" class="card-img-top" alt="Project 1" loading="lazy">
                 <div class="card-body text-center">
                     <h3 class="card-title">Main Page</h3>
                     <p class="card-text"></p>
@@ -97,14 +97,14 @@
         </div>
         <div class="row">
             <div class="card col-md-6">
-                <img src="ULS/ادارة الاستعارات.png" class="card-img-top" alt="Project 1">
+                <img src="ULS/ادارة الاستعارات.png" class="card-img-top" alt="Project 1" loading="lazy">
                 <div class="card-body text-center">
                     <h3 class="card-title">Borrowing Records</h3>
                     <p class="card-text"></p>
                 </div>
             </div>
             <div class="card col-md-6">
-                <img src="ULS/اضافة استعاراة جديدة 1.png" class="card-img-top" alt="Project 1">
+                <img src="ULS/اضافة استعاراة جديدة 1.png" class="card-img-top" alt="Project 1" loading="lazy">
                 <div class="card-body text-center">
                     <h3 class="card-title">Add New Borrow</h3>
                     <p class="card-text">Selecting A Student</p>
@@ -114,14 +114,14 @@
 
         <div class="row">
             <div class="card col-md-6">
-                <img src="ULS/اضافة استعاراة جديدة 2.png" class="card-img-top" alt="Project 1">
+                <img src="ULS/اضافة استعاراة جديدة 2.png" class="card-img-top" alt="Project 1" loading="lazy">
                 <div class="card-body text-center">
                     <h3 class="card-title">Add New Borrow 2</h3>
                     <p class="card-text">Selecting A Book</p>
                 </div>
             </div>
             <div class="card col-md-6">
-                <img src="ULS/اضافة استعاراة جديدة 3.png" class="card-img-top" alt="Project 1">
+                <img src="ULS/اضافة استعاراة جديدة 3.png" class="card-img-top" alt="Project 1" loading="lazy">
                 <div class="card-body text-center">
                     <h3 class="card-title">Add New Borrow 3</h3>
                     <p class="card-text">Borrowing Details</p>
@@ -132,7 +132,7 @@
 
         <div class="row">
             <div class="card col-md-6">
-                <img src="ULS/ادارة الطلاب.png" class="card-img-top" alt="Project 1">
+                <img src="ULS/ادارة الطلاب.png" class="card-img-top" alt="Project 1" loading="lazy">
                 <div class="card-body text-center">
                     <h3 class="card-title">Manage Students</h3>
                     <p class="card-text"></p>
@@ -140,7 +140,7 @@
             </div>
 
             <div class="card col-md-6">
-                <img src="ULS/ادارة الكتب.png" class="card-img-top" alt="Project 1">
+                <img src="ULS/ادارة الكتب.png" class="card-img-top" alt="Project 1" loading="lazy">
                 <div class="card-body text-center">
                     <h3 class="card-title">Manage Books</h3>
                     <p class="card-text"></p>
@@ -150,7 +150,7 @@
 
         <div class="row">
             <div class="card col-md-6">
-                <img src="ULS/ادارة بحوث التخرج.png" class="card-img-top" alt="Project 1">
+                <img src="ULS/ادارة بحوث التخرج.png" class="card-img-top" alt="Project 1" loading="lazy">
                 <div class="card-body text-center">
                     <h3 class="card-title">Manage Research</h3>
                     <p class="card-text"></p>
@@ -158,7 +158,7 @@
             </div>
 
             <div class="card col-md-6">
-                <img src="ULS/ادارة الزيارات.png" class="card-img-top" alt="Project 1">
+                <img src="ULS/ادارة الزيارات.png" class="card-img-top" alt="Project 1" loading="lazy">
                 <div class="card-body text-center">
                     <h3 class="card-title">Manage Visits</h3>
                     <p class="card-text"></p>
