--- a/index.html
+++ b/index.html
@@ -26,8 +26,8 @@
         <meta name="twitter:description" content="Software projects, CV download, and more." />
         <meta name="twitter:image" content="your-photo.jpg" />
 
-        <meta property="og:title" content="Nawaf AlMawri | Full Stack Desktop Developer & Software Engineer">
-        <meta property="og:description" content="Check out Nawaf's software projects, download his CV, and get in touch.">
+        <meta property="og:title" content="000Nawaf AlMawri | Full Stack Desktop Developer & Software Engineer">
+        <meta property="og:description" content="000Check out Nawaf's software projects, download his CV, and get in touch.">
         <meta property="og:image" content="your-photo.jpg">
         <!-- <meta property="og:url" content="https://your-website.com"> -->
         <meta property="og:type" content="website">
