--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
       </header>
       <article>
         <p>
-          I am <strong>Nawaf Al-Mawri</strong>, 21 years old, a Software
+          I am <strong>Abood Al-Mawri</strong>, 21 years old, a Software
           Engineering student and desktop developer specializing in
           <strong>C#</strong>, <strong>C++</strong>, and
           <strong>SQL Server</strong>. I have experience developing complete
