--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
           <img src="your-photo.jpg" alt="Nawaf AlMawri" class="profile-img" />
         </div>
         <div class="hero-text">
-          <h1>Hello, I am Nawaf AlMawri</h1>
+          <h1>Hello, I am Abood AlMawri</h1>
           <p>Full Stack Desktop Developer</p>
         </div>
       </div>
@@ -109,7 +109,7 @@
       </header>
       <article>
         <p>
-          I am <strong>Abood Al-Mawri</strong>, 21 years old, a Software
+          I am <strong>Nawaf Al-Mawri</strong>, 21 years old, a Software
           Engineering student and desktop developer specializing in
           <strong>C#</strong>, <strong>C++</strong>, and
           <strong>SQL Server</strong>. I have experience developing complete
