--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Abood 999 | Full Stack Desktop Developer & Software Engineer</title>
+    <title>Abood | Full Stack Desktop Developer & Software Engineer</title>
     <link
       rel="icon"
       type="image/PNG"
@@ -97,7 +97,7 @@
           <img src="your-photo.jpg" alt="Nawaf AlMawri" class="profile-img" />
         </div>
         <div class="hero-text">
-          <h1>Hello, I am Abood AlMawri</h1>
+          <h1>Hello, I am Nawaf AlMawri & Abood Alashwal</h1>
           <p>Full Stack Desktop Developer</p>
         </div>
       </div>
@@ -316,3 +316,4 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
   </body>
 </html>
+
