--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
         </div>
         <div class="hero-text">
           <h1>Hello, I am Nawaf AlMawri</h1>
-          <p>Full fStack Desktop Developer</p>
+          <p>Full Stack Desktop Developer</p>
         </div>
       </div>
     </header>
