--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
           <img src="your-photo.jpg" alt="Nawaf AlMawri" class="profile-img" />
         </div>
         <div class="hero-text">
-          <h1>Hello, I am Nawaf AlMawri</h1>
+          <h1>Hello, I am Abood Alashwal</h1>
           <p>Full Stack Desktop Developer</p>
         </div>
       </div>
