--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Abood | Full Stack Desktop Developer & Software Engineer</title>
+    <title>Nawaf Almawri | Full Stack Desktop Developer & Software Engineer</title>
     <link
       rel="icon"
       type="image/PNG"
