تعديل اسم الشخص

--- a/index.html
+++ b/index.html
@@ -3,7 +3,9 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Abood | Full Stack Desktop Developer & Software Engineer</title>
+    <title>
+      Nawaf Almawri | Full Stack Desktop Developer & Software Engineer
+    </title>
     <link
       rel="icon"
       type="image/PNG"
@@ -97,7 +99,7 @@
           <img src="your-photo.jpg" alt="Nawaf AlMawri" class="profile-img" />
         </div>
         <div class="hero-text">
-          <h1>Hello, I am</h1>
+          <h1>Hello, I am Nawaf Almawri</h1>
           <p>Full Stack Desktop Developer</p>
         </div>
       </div>
